--- a/hw3.html
+++ b/hw3.html
@@ -14,6 +14,18 @@
         for this animal.</p>
     <img src = "/Users/ibart/Downloads/nova1.jpg" alt = 'chocolate lab yawning' width = 500>
 
+    <hr>
+    <h3>Contact</h3>
+    Email: <a href = "mailto: bartolomei.i@northeastern.edu">
+    
+    <button id = 'NB'>Next</button>
+    <script>
+        const navigatebutton = document.getElementById('NB')
+        navigatebutton.addEventListener('click', function(){
+            window.ocation.href = 'hw3.html'
+        })
+    </script>
+        
     <h3 di = 'main'>I love my dog, and here's why you should too.</h3>
     <p id = 'main'> She's a good girl. With her shiny chocolate fur coat, she resembles a seal. She bounds along fields and exudes giddy energy everywhere she goes. 
         She's a COVID puppy, so she's a little weird, but her quirkiness never stopped her from gaining attention. Instead of wagging her tail, she swings it like a helicopter.
