--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <script>
         const navigatebutton = document.getElementById('NB')
         navigatebutton.addEventListener('click', function(){
-            window.location.href = 'hw3.html'
+            window.location.href = 'index.html'
         })
     </script>
         
     <h3 di = 'main'>I love my dog, and here's why you should too.</h3>
-    <p id = 'main'> She's a good girl. With her shiny chocolate fur coat, she resembles a seal. She bounds along fields and exudes giddy energy everywhere she goes. 
+    <p id = 'main'> She's a good girl. Her shiny chocolate fur coat resembles that of a seals. She bounds along fields and exudes giddy energy everywhere she goes. 
         She's a COVID puppy, so she's a little weird, but her quirkiness never stopped her from gaining attention. Instead of wagging her tail, she swings it like a helicopter.
         Acting like she doesn't have 3 brothers and a dad, her bark doesn't know the difference between an innocent male bystander and a threat to humanity. A sibling comes home
         from college? Piss on the floor! She is our hero and the one we love the most, and if you could ever meet her, you'd think the same.</p>
