--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 style="color: brown;"> Introducing Nova </h1>
     <p id = 'main'>I will take this opportunity to present my dog. She's the Eighth Wonder of the World and deserves her own website. I hope readers will understand the scope of my passion
         for this animal.</p>
-    <img src = "/Users/ibart/Downloads/nova1.jpg" alt = 'chocolate lab yawning' width = 500>
+    <img src = "nova1.jpg" alt = 'chocolate lab yawning' width = 500>
 
     <hr>
     <h3>Contact</h3>
