--- a/nextpage.html
+++ b/nextpage.html
@@ -23,8 +23,8 @@
         Acting like she doesn't have 3 brothers and a dad, her bark doesn't know the difference between an innocent male bystander and a threat to humanity. A sibling comes home
         from college? Piss on the floor! She is our hero and the one we love the most, and if you could ever meet her, you'd think the same.</p>
 
-    <p> Labs are an excellent family dog. She made quarantine much easier by just being herself. Here are some facts about labs if you ever think about
-        investing in the best breed in the world:
+    <p> Labs are an excellent family dog. She made quarantine much easier by just being herself and bringing energy back into the house. 
+        Here are some facts about labs if you ever think about investing in the best breed in the world:
         <ol class = "A"?
             <li>Endless energy</li>
             <li>Recommended to put them in obedience classes</li>
@@ -32,7 +32,7 @@
             <li>Color does not indicate any particular character type</li>
             <li>They love to swim</li>
         </ol>
-        If you're ever considering getting a labrador, remember these! In any case, however, you'll love your lab. Nova is one great example of so many.
+        If you're ever considering getting a labrador, remember these facts! In any case, however, you'll love your lab. Nova is one great example of so many.
   <hr>
       <h3><i> Click the 'Next' button to learn more!</i></h3>
       <button id = 'NB' style = 'float: right;'>Back</button>
