--- a/nextpage.html
+++ b/nextpage.html
@@ -12,7 +12,7 @@
 <body>
 
 <div style = 'text-align: center;'>
-        <img src = "nova2.jpg" alt = 'nova' width = '500'>
+        <img src = "nova2.jpg" alt = 'nova yawning' width = '500'>
     </div>
 
     <div style = 'text-align: center;'>
@@ -25,13 +25,13 @@
 
     <p> Labs are an excellent family dog. She made quarantine much easier by just being herself and bringing energy back into the house. 
         Here are some facts about labs if you ever think about investing in the best breed in the world:
-        <ol class = "A"?
+        <ul>
             <li>Endless energy</li>
             <li>Recommended to put them in obedience classes</li>
             <li>Versatile workers and hunter blood!</li>
             <li>Color does not indicate any particular character type</li>
             <li>They love to swim</li>
-        </ol>
+        </ul>
         If you're ever considering getting a labrador, remember these facts! In any case, however, you'll love your lab. Nova is one great example of so many.
   <hr>
       <h3><i> Click the 'Next' button to learn more!</i></h3>
