--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         for this animal.</p>
     
     <div style = 'text-align: center;'>
-        <img src = "nova1.jpg" alt = 'chocolate lab yawning' width = '500'>
+        <img src = "nova1.jpg" alt = 'nova' width = '500'>
     </div>
 
     <hr>
